[1.302] fix typo -- faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -80,7 +80,7 @@ FAQ - Управление системой
     Тем не менее, помните, что использование -current подойдет не всем.
 </ul>
 
-Securtiy исправления для для third party ПО, установленного при помощи
+Security исправления для third party ПО, установленного при помощи
 <a href="faq15.html">пакетов</a>, затрагивают лишь последнюю версию.
 Тут есть несколько вариантов:
 
@@ -88,14 +88,14 @@ Securtiy исправления для для third party ПО, установл
   <li><b>Использование бинарных пакетов</b> (доступно для amd64, arm64, i386, sparc64)
     <br>
     Бинарные пакеты для release и stable пересобираются только в случае найденных
-    и исправленных в них проблем с безопасностью или необходимости использования
-    других серьезных исправлений.
+    и исправленных в них проблем с безопасностью или необходимости других 
+    серьезных исправлений.
     Просто запустите <a href="https://man.openbsd.org/pkg_add">pkg_add(1)</a>
-    с флагом <code>-u</code>, чтобы загрузить себе новые (бинарные) файлы.
+    с флагом <code>-u</code>, чтобы загрузить новые (бинарные) файлы.
     <p>
   <li><b>Использование дерева портов -stable</b>
     <br>
-    Загрузите (или обновите) себе <a href="ports/ports.html">дерево портов</a>,
+    Загрузите (или обновите) <a href="ports/ports.html">дерево портов</a>,
     запустите скрипт <code>/usr/ports/infrastructure/bin/pkg_outdated</code>,
     чтобы получить список всех пакетов, нуждающихся в пересборке, и выполните
     команду <code>make update</code> в каталоге соответствующего порта.
@@ -109,7 +109,6 @@ Securtiy исправления для для third party ПО, установл
 
 Чтобы получать уведомления об обновлениях портов, подпишитесь на рассылку
 <a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&amp;extra=ports-changes">ports-changes</a>
-
 
 <h2 id="rc">Системные демоны (System Daemons)</h2>
 
@@ -154,8 +153,8 @@ httpd_flags=NO
 <a href="https://man.openbsd.org/doas">doas(1)</a> позволяет системному
 администратору разрешать определенным пользователям запускать определенные
 команды от имени другого пользователя. Обычные пользователи могут выполнять
-административные команды, требуя только аутентификации самого себя, без
-необходимости пароля root.
+административные команды, используя только пароль собственной учетной записи,
+а не пароль root.
 
 <p>
 Например, при соответствующей настройке следующая команда покажет содержимое
@@ -227,8 +226,8 @@ boot> <b>boot -s</b>
     права root, поэтому пароль вводить не портебуется.
 
   <li><b>Загрузка в многопользовательском режиме.</b>
-    Это можно сделав нажав "CTRL-D" для перехода в нормальный режим загрузки,
-    или выполнив команду
+    Необходимо нажать "CTRL-D" для перехода в нормальный режим загрузки,
+    или выполнить команду
     <a href="https://man.openbsd.org/reboot">reboot(8)</a>.
 </ul>
 
@@ -274,13 +273,13 @@ OpenBSD предполагает, что ваши аппаратные часы 
 (Universal Coordinated Time), а не по местному времени. Это может причиной проблем при
 <a href="faq4.html#Multibooting">мультизагрузке</a>.
 Большинство других операционных систем могут быть настроены по тому же принципу,
-что и OpenBSD, чтобы избежать эту проблему.
+что и OpenBSD, чтобы избежать этой проблемы.
 
 <p>
-Если испрользование UTC является причиной проблем, вы всегда можете изменить
+Если использование UTC является причиной проблем, вы всегда можете изменить
 настройки, в
 <a href="https://man.openbsd.org/sysctl.conf">sysctl.conf(5)</a>.
-Например, добавьте следюущие строки в <code>/etc/sysctl.conf</code> чтобы
+Например, добавьте следующие строки в <code>/etc/sysctl.conf</code> чтобы
 сконфигурировать OpenBSD для использования аппаратные часов
 установленных на US/Eastern (5 часов или 300 минут от UTC):
 
@@ -371,7 +370,7 @@ ASCII, а таже частично кодировку UTF-8 набора сим
 
 <p>
 Эта функция может повысить производительность для некоторых
-рабочих нагрузок, но снизить ее для других.
+рабочих нагрузок, но снизить её для других.
 
 <p>
 Технология SMT была использована и задействована в нескольких
@@ -387,7 +386,6 @@ ASCII, а таже частично кодировку UTF-8 набора сим
 Это можно изменить, т.е. снова включить, установив для sysctl
 <code>hw.smd</code> значение <code>1</code>.
 Однако обычно делать это не рекомендуется.
-
 
 <h2 id="SKey">Использование S/Key</h2>
 
@@ -440,7 +438,7 @@ Next login password: HAUL BUS JAKE DING HOT HOG
 <a href="https://man.openbsd.org/otp-md5">otp-md5(1)</a>,
 порядковый номер (sequence number) - <code>100</code>,
 а секретный ключ - <code>oshi45820</code>.
-Шесть маленьких слов <code>HAUL BUS JAKE DING HOT HOG</code> составляют
+Шесть коротких слов <code>HAUL BUS JAKE DING HOT HOG</code> составляют
 S/Key пароль с порядковым номером <code>100</code>.
 
 <h3>Генерация S/Key паролей</h3>
