--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -62,7 +62,7 @@ FAQ - Управление системой
     <br>
     Загрузите или обновите ваш локальный
     <a href="../anoncvs.html">CVS репозиторий</a>, затем
-    <a href="../stable.html">перекомпилируйте и пересоберите</a> ядро и userland.
+    <a href="../stable.html">перекомпилируйте и пересоберите</a> ядро и пользовательское окружение.
     <p>
   <li><b>Накладывание патчей на уязвимые файлы</b>
     <br>
@@ -80,8 +80,8 @@ FAQ - Управление системой
     Тем не менее, помните, что использование -current подойдет не всем.
 </ul>
 
-Security исправления для third party ПО, установленного при помощи
-<a href="faq15.html">пакетов</a>, затрагивают лишь последнюю версию.
+Security исправления для сторонних программ, установленных при помощи
+<a href="faq15.html">пакетов</a>, затрагивают лишь последние версии.
 Тут есть несколько вариантов:
 
 <ul>
