--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -40,8 +40,8 @@ FAQ - Управление системой
 
 <h2 id="Patches">Обновления безопасности (Security Updates)</h2>
 
-При обнаружении и исправлении критического бага, fix сразу же будет добавлен
-в дерево -current нашего репозитория (fix так же будет доступен во всех
+При обнаружении и исправлении критической ошибки, исправление сразу же будет добавлено
+в дерево -current нашего репозитория (оно так же будет доступено во всех
 последующих <a href="faq5.html#Flavors">сборках снапошотов</a>).
 Затем он будет перенесен в два последних релиза OpenBSD в виде
 <a href="../errata.html">errata</a>, а подробности будут отправлены в почтовую рассылку
