[1.302] fix typo -- faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -54,8 +54,8 @@ FAQ - Управление системой
   <li><b>Использование бинарных патчей</b> (доступно для amd64, arm64, i386)
     <br>
     Утилита <a href="https://man.openbsd.org/syspatch">syspatch(8)</a> может
-    быть использованна для загрузки всех необходимых исправлений, если она
-    запускается на двух последних поддерживаемых OpenBSD релизах.
+    быть использована для загрузки всех необходимых исправлений, если она
+    запускается на двух последних поддерживаемых релизах OpenBSD.
     Это самый быстрый и простой способ обновления базовых компонентов системы.
     <p>
   <li><b>Обновление системы до -stable</b>
