--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -41,9 +41,9 @@ FAQ - Управление системой
 <h2 id="Patches">Обновления безопасности (Security Updates)</h2>
 
 При обнаружении и исправлении критической ошибки, исправление сразу же будет добавлено
-в дерево -current нашего репозитория (оно так же будет доступено во всех
+в дерево -current нашего репозитория (оно так же будет доступно во всех
 последующих <a href="faq5.html#Flavors">сборках снапошотов</a>).
-Затем он будет перенесен в два последних релиза OpenBSD в виде
+Затем оно будет перенесено в два последних релиза OpenBSD в виде
 <a href="../errata.html">errata</a>, а подробности будут отправлены в почтовую рассылку
 <a href="https://lists.openbsd.org/cgi-bin/mj_wwwusr?func=lists-long-full&amp;extra=announce">announce</a>.
 
